--- a/package.json
+++ b/package.json
@@ -34,14 +34,13 @@
     "url": "https://github.com/antvis/util/issues"
   },
   "devDependencies": {
-    "@lite-js/torch": "~0.2.6",
     "babel-cli": "~6.26.0",
     "babel-eslint": "~7.2.3",
     "babel-loader": "~7.1.1",
     "babel-plugin-transform-remove-strict-mode": "~0.0.2",
     "babel-preset-env": "~1.6.1",
     "chai": "~4.0.1",
-    "electron": "~1.8.4",
+    "electron": "~2.0.2",
     "eslint": "~3.19.0",
     "eslint-config-airbnb": "~15.0.1",
     "eslint-config-egg": "~4.2.0",
@@ -50,6 +49,7 @@
     "shelljs": "~0.7.8",
     "spm-sinon": "~1.6.0",
     "string-replace-loader": "~1.3.0",
+    "torchjs": "~1.2.1",
     "uglify-js": "~3.0.15",
     "webpack": "~3.4.1"
   },
