--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@antv/util",
-  "version": "1.0.0",
+  "version": "1.0.0-beta",
   "description": "A common util collection for antv projects",
   "main": "index.js",
+  "browser": "build/util.js",
+  "module": "index.js",
   "scripts": {
     "build": "webpack",
     "build-lib": "babel src --out-dir lib",
