--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@antv/util",
   "version": "1.0.0-beta",
   "description": "A common util collection for antv projects",
-  "main": "index.js",
+  "main": "build/util.js",
   "browser": "build/util.js",
-  "module": "index.js",
+  "module": "lib/index.js",
   "scripts": {
     "build": "webpack",
     "build-lib": "babel src --out-dir lib",
