--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/util",
-  "version": "1.0.6-beta.2",
+  "version": "1.0.6",
   "description": "A common util collection for antv projects",
   "browser": "build/util.js",
   "main": "lib/index.js",
