--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/util",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "A common util collection for antv projects",
   "browser": "build/util.js",
   "main": "lib/index.js",
@@ -12,7 +12,7 @@
     "compress": "uglifyjs --compress --mangle --output dist/util-$npm_package_version.min.js -- build/util.js",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
     "coverage-viewer": "torch-coverage",
-    "coverage-generator": "torch --coverage --compile --renderer --recursive test/unit",
+    "coverage-generator": "torch --coverage --compile --renderer --source-pattern src/*.js,src/**/*.js --recursive test/unit",
     "dev": "webpack --config webpack-dev.config.js",
     "dist": "rm -rf dist && mkdir dist && npm run build && npm run compress",
     "prepublishOnly": "npm run build-lib && npm run dist",
@@ -51,7 +51,7 @@
     "shelljs": "~0.7.8",
     "spm-sinon": "~1.6.0",
     "string-replace-loader": "~1.3.0",
-    "torchjs": "~1.2.1",
+    "torchjs": "~2.0.4",
     "uglify-js": "~3.0.15",
     "webpack": "~3.4.1"
   },
