--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@antv/util",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A common util collection for antv projects",
   "browser": "build/util.js",
-  "main": "lib/index.js",
-  "module": "src/index.js",
+  "main": "build/index.js",
+  "module": "lib/index.js",
   "scripts": {
     "build": "webpack",
     "build-lib": "babel src --out-dir lib",
