fix(*): fix ts types definition

--- a/packages/path-util/package.json
+++ b/packages/path-util/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@antv/path-util",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A common util collection for antv projects",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "rm -rf lib && tsc",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
