--- a/packages/dom-util/package.json
+++ b/packages/dom-util/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "A common util collection for antv projects",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "rm -rf lib && tsc",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
@@ -33,7 +34,5 @@
     "less": "^3.9.0"
   },
   "homepage": "https://github.com/antvis/util#readme",
-  "dependencies": {
-    
-  }
+  "dependencies": {}
 }
