--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/preset-typescript": "^7.1.0",
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-angular": "^7.1.2",
-    "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.18",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
@@ -67,7 +66,6 @@
   "license": "ISC",
   "dependencies": {
     "@antv/istanbul": "0.0.0",
-    "@antv/torch": "^1.0.0",
-    "lodash": "^4.17.11"
+    "@antv/torch": "^1.0.0"
   }
 }
