--- a/packages/dom-util/package.json
+++ b/packages/dom-util/package.json
@@ -4,8 +4,18 @@
   "description": "A common util collection for antv projects",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "module": "esm/index.js",
+  "files": [
+    "package.json",
+    "esm",
+    "lib",
+    "README.md"
+  ],
   "scripts": {
-    "build": "rm -rf lib && tsc",
+    "build": "npm run clean && run-p build:*",
+    "build:esm": "tsc -p tsconfig.json --target ES5 --module ESNext --outDir esm",
+    "build:cjs": "tsc -p tsconfig.json --target ES5 --module commonjs --outDir lib",
+    "clean": "rm -rf lib && rm -rf esm",
     "coverage": "npm run coverage-generator && npm run coverage-viewer",
     "coverage-generator": "torch --coverage --compile --source-pattern src/*.js,src/**/*.js --opts __tests__/mocha.opts",
     "coverage-viewer": "torch-coverage",
@@ -30,8 +40,11 @@
   },
   "devDependencies": {
     "@antv/torch": "^1.0.0",
-    "less": "^3.9.0"
+    "less": "^3.9.0",
+    "npm-run-all": "^4.1.5"
   },
   "homepage": "https://github.com/antvis/util#readme",
-  "dependencies": {}
+  "dependencies": {
+    "tslib": "^1.10.0"
+  }
 }
