feat: 添加 prepublish 命令

--- a/packages/color-util/package.json
+++ b/packages/color-util/package.json
@@ -22,7 +22,8 @@
     "test": "torch --renderer --compile --opts __tests__/mocha.opts",
     "test-live": "torch --compile --interactive --opts __tests__/mocha.opts",
     "tsc": "tsc --noEmit",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepublishOnly": "npm-run-all --parallel test build"
   },
   "repository": {
     "type": "git",
