--- a/packages/path-util/package.json
+++ b/packages/path-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/path-util",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "A common util collection for antv projects",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -45,7 +45,7 @@
   },
   "homepage": "https://github.com/antvis/util#readme",
   "dependencies": {
-    "@antv/util": "~2.0.0",
+    "@antv/util": "^2.0.7",
     "tslib": "^1.10.0"
   }
 }
