--- a/packages/matrix-util/package.json
+++ b/packages/matrix-util/package.json
@@ -45,8 +45,8 @@
   },
   "homepage": "https://github.com/antvis/util#readme",
   "dependencies": {
-    "@antv/gl-matrix": "^2.7.1",
     "@antv/util": "^2.0.7",
+    "gl-matrix": "^3.3.0",
     "tslib": "^1.10.0"
   }
 }
