--- a/packages/matrix-util/package.json
+++ b/packages/matrix-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/matrix-util",
-  "version": "2.0.7",
+  "version": "3.0.0",
   "description": "A common util collection for antv projects",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -45,7 +45,7 @@
   },
   "homepage": "https://github.com/antvis/util#readme",
   "dependencies": {
-    "@antv/gl-matrix": "^2.7.1",
+    "gl-matrix": "^3.3.0",
     "@antv/util": "^2.0.7",
     "tslib": "^1.10.0"
   }
