chore: update @antv/util to 2.0.11

--- a/package.json
+++ b/package.json
@@ -51,7 +51,27 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-angular"
-    ]
+    ],
+    "rules": {
+      "type-enum": [
+        2,
+        "always",
+        [
+          "build",
+          "chore",
+          "ci",
+          "docs",
+          "feat",
+          "fix",
+          "perf",
+          "refactor",
+          "revert",
+          "style",
+          "test",
+          "wip"
+        ]
+      ]
+    }
   },
   "husky": {
     "hooks": {
