--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@antv/torch": "^1.0.0",
+    "chai": "^4.2.0",
     "less": "^3.9.0",
     "npm-run-all": "^4.1.5"
   },
