--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/util",
-  "version": "2.0.15",
+  "version": "2.0.16",
   "description": "A common util collection for antv projects",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -47,10 +47,10 @@
     "chai": "^4.2.0",
     "less": "^3.9.0",
     "npm-run-all": "^4.1.5",
-    "csstype": "^3.0.8"
   },
   "homepage": "https://github.com/antvis/util#readme",
   "dependencies": {
-    "tslib": "^2.0.3"
+    "tslib": "^2.0.3",
+    "csstype": "^3.0.8"
   }
 }
