--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -46,11 +46,11 @@
     "@antv/torch": "^1.0.0",
     "chai": "^4.2.0",
     "less": "^3.9.0",
-    "npm-run-all": "^4.1.5",
-    "csstype": "^3.0.8"
+    "npm-run-all": "^4.1.5"
   },
   "homepage": "https://github.com/antvis/util#readme",
   "dependencies": {
-    "tslib": "^2.0.3"
+    "tslib": "^2.0.3",
+    "csstype": "^3.0.8"
   }
 }
