--- a/packages/matrix-util/package.json
+++ b/packages/matrix-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/matrix-util",
-  "version": "3.0.4",
+  "version": "3.1.0-beta.3",
   "description": "A common util collection for antv projects",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -48,7 +48,7 @@
   "homepage": "https://github.com/antvis/util#readme",
   "dependencies": {
     "@antv/util": "^2.0.9",
-    "gl-matrix": "^3.3.0",
+    "gl-matrix": "^3.4.3",
     "tslib": "^2.0.3"
   }
 }
