--- a/packages/dom-util/package.json
+++ b/packages/dom-util/package.json
@@ -35,7 +35,7 @@
     "g"
   ],
   "author": "https://github.com/orgs/antvis/people",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/antvis/util/issues"
   },
