--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -38,7 +38,7 @@
     "access": "public"
   },
   "author": "https://github.com/orgs/antvis/people",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/antvis/util/issues"
   },
