--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "typescript": "~4.4.0"
   },
   "jest": {
-     "runner": "jest-electron/runner",
+    "runner": "jest-electron/runner",
     "testEnvironment": "jest-electron/environment",
     "preset": "ts-jest",
     "collectCoverage": true,
@@ -89,5 +89,8 @@
       "pre-commit": "npm run lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "dependencies": {
+    "fast-deep-equal": "^3.1.3"
   }
 }
