--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,10 @@
     "@typescript-eslint/no-empty-function": "off",
     "import/no-unresolved": "off",
     "no-multiple-empty-lines": 1,
-    "import/order": "warn"
+    "import/order": "warn",
+    "no-case-declarations": "off",
+    "prefer-spread": "warn",
+    "prefer-const": "warn"
   },
   "env": {
     "node": true,
