--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -50,7 +52,6 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.39.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^26.5.1",
@@ -76,12 +77,12 @@
   "limit-size": [
     {
       "path": "dist/util.min.js",
-      "limit": "20 Kb",
+      "limit": "15 Kb",
       "gzip": true
     },
     {
       "path": "dist/util.min.js",
-      "limit": "50 Kb"
+      "limit": "40 Kb"
     }
   ],
   "husky": {
