--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "lib",
-    "module": "commonjs",
+    "module": "esnext",
     "target": "es5",
     "jsx": "preserve",
     "moduleResolution": "node",
