chore: lint lodash util

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,7 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -11,6 +9,7 @@
     "plugin:import/warnings",
     "plugin:import/typescript"
   ],
+  "ignorePatterns": ["src/lodash/*.ts"],
   "rules": {
     "no-constant-condition": [
       "error",
