--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@antv/util",
-  "version": "3.2.3",
+  "version": "3.2.4",
   "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
   "module": "esm/index.js",
+  "unpkg": "dist/util.min.js",
   "types": "lib/index.d.ts",
   "files": [
     "src",
