--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/util",
-  "version": "3.3.1",
+  "version": "3.3.3",
   "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
@@ -92,5 +92,6 @@
     "fast-deep-equal": "^3.1.3",
     "gl-matrix": "^3.3.0",
     "tslib": "^2.3.1"
-  }
+  },
+  "repository": "https://github.com/antvis/util.git"
 }
