--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
   },
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
+    "flru": "^1.0.2",
     "gl-matrix": "^3.3.0",
     "tslib": "^2.3.1"
   },
