--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/util",
-  "version": "3.3.4",
+  "version": "3.3.5",
   "license": "MIT",
   "sideEffects": false,
   "main": "lib/index.js",
@@ -90,6 +90,7 @@
   },
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
+    "flru": "^1.0.2",
     "gl-matrix": "^3.3.0",
     "tslib": "^2.3.1"
   },
