--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "build": "run-p build:*",
     "ci": "run-s lint test build",
     "prepublishOnly": "npm run ci",
-    "benchmarks": "node benchmarks/path-2-string.test && node benchmarks/path-2-absolute.test"
+    "benchmarks": "node benchmarks/path-2-string.test && node benchmarks/path-2-absolute.test",
+    "postinstall": "husky install",
+    "prepare": "husky install"
   },
   "keywords": [
     "util",
@@ -34,7 +36,8 @@
   ],
   "devDependencies": {
     "@antv/path-util": "^2.0.15",
-    "@commitlint/cli": "^11.0.0",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.3",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
@@ -44,11 +47,11 @@
     "benchmark": "^2.1.4",
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^5.0.9",
+    "husky": "^5.2.0",
     "jest": "^26.6.3",
     "jest-electron": "^0.1.12",
     "limit-size": "^0.1.4",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
@@ -70,8 +73,7 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "limit-size": [
@@ -85,11 +87,10 @@
       "limit": "40 Kb"
     }
   ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
