--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "@antv/path-util": "^2.0.15",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.3",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.2",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
@@ -48,22 +49,21 @@
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.22.1",
     "husky": "^5.2.0",
-    "jest": "^26.6.3",
-    "jest-electron": "^0.1.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^25.0.0",
     "limit-size": "^0.1.4",
     "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
+    "prettier": "^3.3.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.39.0",
-    "rollup-plugin-uglify": "^6.0.4",
-    "ts-jest": "^26.5.1",
-    "typescript": "~4.4.0"
+    "rollup": "^4.22.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5"
   },
   "jest": {
-    "runner": "jest-electron/runner",
-    "testEnvironment": "jest-electron/environment",
     "preset": "ts-jest",
+    "testEnvironment": "jsdom",
     "collectCoverage": true,
     "testRegex": "(/__tests__/.*\\.(test|spec))\\.ts$",
     "collectCoverageFrom": [
