--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "build": "run-p build:*",
     "ci": "run-s lint test build",
     "prepublishOnly": "npm run ci",
-    "benchmarks": "node benchmarks/path-2-string.test && node benchmarks/path-2-absolute.test"
+    "benchmarks": "node benchmarks/path-2-string.test && node benchmarks/path-2-absolute.test",
+    "postinstall": "husky install",
+    "prepare": "husky install"
   },
   "keywords": [
     "util",
@@ -34,33 +36,34 @@
   ],
   "devDependencies": {
     "@antv/path-util": "^2.0.15",
-    "@commitlint/cli": "^11.0.0",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.2",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.3",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "benchmark": "^2.1.4",
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^5.0.9",
-    "jest": "^26.6.3",
-    "jest-electron": "^0.1.12",
+    "husky": "^5.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^25.0.0",
     "limit-size": "^0.1.4",
-    "lint-staged": "^10.5.4",
+    "lint-staged": "^15.2.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
+    "prettier": "^3.3.3",
     "rimraf": "^3.0.2",
-    "rollup": "^2.39.0",
-    "rollup-plugin-uglify": "^6.0.4",
-    "ts-jest": "^26.5.1",
-    "typescript": "~4.4.0"
+    "rollup": "^4.22.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5"
   },
   "jest": {
-    "runner": "jest-electron/runner",
-    "testEnvironment": "jest-electron/environment",
     "preset": "ts-jest",
+    "testEnvironment": "jsdom",
     "collectCoverage": true,
     "testRegex": "(/__tests__/.*\\.(test|spec))\\.ts$",
     "collectCoverageFrom": [
@@ -70,8 +73,7 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "limit-size": [
@@ -85,11 +87,10 @@
       "limit": "40 Kb"
     }
   ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "dependencies": {
     "fast-deep-equal": "^3.1.3",
