--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "clean": "rimraf lib esm dist",
     "lint-staged": "lint-staged",
     "size": "limit-size",
-    "lint": "eslint ./src ./__tests__ && prettier ./src ./__tests__ --check ",
-    "fix": "eslint ./src ./__tests__ --fix && prettier ./src ./__tests__ --write ",
+    "lint": "eslint ./src ./__tests__ && prettier ./src ./__tests__ --check && lint-md docs/**/* README.md",
+    "fix": "eslint ./src ./__tests__ --fix && prettier ./src ./__tests__ --write && lint-md docs/**/* README.md --fix",
     "test": "jest",
     "build:umd": "rimraf ./dist && rollup -c && npm run size",
     "build:cjs": "rimraf ./lib && tsc --module commonjs --outDir lib",
@@ -36,6 +36,7 @@
     "@antv/path-util": "^2.0.15",
     "@commitlint/cli": "^18.6.1",
     "@commitlint/config-conventional": "^18.6.3",
+    "@lint-md/cli": "^2.0.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
